# msg_character_controller

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.local.json
examples/: float_test.rs  hilly_planet.rs  platform_box.rs  spherical_planet.rs
examples/helpers/: config_panel.rs  controls_plugin.rs  diagnostics_panel.rs  mesh_shapes.rs  mod.rs  plugin.rs  respawn.rs
src/: backend.rs  collision.rs  config.rs  detection.rs  intent.rs  lib.rs  navigation.rs  rapier.rs  state.rs  systems.rs
tests/: floating_test.rs  integration.rs
