[package]
name = "msg_character_controller"
version = "0.0.1"
edition = "2024"
authors = ["ffmulks <63452434+ffmulks@users.noreply.github.com>"]
description = "Advanced 2D floating rigidbody character controller with physics backend abstraction"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ffmulks/msg_character_controller"

[dependencies]
bevy = { version = "0.16", default-features = false, features = ["bevy_render", "bevy_asset"] }

[dev-dependencies]
# Minimal bevy for integration tests (MinimalPlugins only)
bevy_rapier2d = { version = "0.31.0", features = ["simd-stable", "debug-render-2d"] }

[features]
default = []
rapier2d = ["dep:bevy_rapier2d"]
# Feature for running examples (requires platform windowing libs)
examples = [
    "rapier2d",
    "bevy/bevy_core_pipeline",
    "bevy/bevy_sprite",
    "bevy/bevy_text",
    "bevy/bevy_ui",
    "bevy/bevy_winit",
    "bevy/default_font",
    "bevy/multi_threaded",
    "bevy/png",
    "bevy/x11",
]

[dependencies.bevy_rapier2d]
version = "0.31.0"
features = ["simd-stable", "debug-render-2d"]
optional = true

# Examples - run with: cargo run --example platform_box --features examples
# Note: On Linux, examples require system libraries for windowing (x11 or wayland)
[[example]]
name = "platform_box"
path = "examples/platform_box.rs"
required-features = ["examples"]

[[example]]
name = "spherical_planet"
path = "examples/spherical_planet.rs"
required-features = ["examples"]

[[example]]
name = "float_test"
path = "examples/float_test.rs"
required-features = ["examples"]
